<resources>
    <string name="app_name">ParanBende</string>

    <string name="splash_text">Paran Bende</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>

    <string name="title_activity_maker">MakerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="application_name">Paran Bende</string>
    <string name="dummy_user_name">Ahmet Çelik</string>

    <string name="max_amount">Max Amount</string>
    <string name="min_amount">Min Amount</string>
    <string name="range">Distance</string>
    <string name="status">Status</string>

    <string name="ok">OK</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_length_failed">Your password must be at least 6 characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="loading">Loading..</string>
    <string name="internet_connection_problem" type="id">Internet Connection Problem</string>
    <string name="something_going_wrong">Ops, something going wrong</string>
    <string name="successfully_registration_message">Your account has created successfully</string>
    <string name="password_confirmation_failed">Please enter the same password again.</string>
    <string name="spinner_title">Choose a user type</string>


        <string-array
            name="userTypesArray">
            <item>Taker</item>
            <item>Maker</item>
        </string-array>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="searching">Searching..</string>
    <string name="cancel">Cancel</string>
    <string name="save_settings">Settings is saved</string>
    <string name="isOnlineChanged">Online status has been changed.</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="chooseUserType">Choose User Type:</string>
    <string name="amountMoney">How much money do you need ?</string>
    <string name="logOut">Log Out</string>


</resources>
