<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_maker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_header_maker"/>

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Switch
                android:id="@+id/s_is_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Is Online: "/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t_min_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/min_amount"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/filterItemContainer">

                    <EditText
                        android:id="@+id/e_min_amount"
                        style="@style/filterItemEdittext" />

                    <TextView
                        style="@style/filterItemAdditional"
                        android:text="TRY"/>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/t_max_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_amount"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/filterItemContainer">

                <EditText
                    android:id="@+id/e_max_amount"
                    style="@style/filterItemEdittext"
                    />

                    <TextView
                        style="@style/filterItemAdditional"
                        android:text="TRY"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/range"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/filterItemContainer">

                    <EditText
                        android:id="@+id/e_distance"
                        android:inputType="number"
                        android:text="1"
                        style="@style/filterItemEdittext"
                        />

                    <TextView
                        style="@style/filterItemAdditional"
                        android:text="km"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/b_settings_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/ok"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logOut"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
