<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamunknown.paranbende.controller.LoginActivity">

    <!-- Login progress -->


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/app_logo" />


            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="screen"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:padding="10dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="screen"
                app:passwordToggleDrawable="@drawable/toggle_pass">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:text="@string/action_sign_in"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/account_register_text"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Click here to register"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>