<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <!--Toolbar-->
    <include
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/my_toolbar" />
    <TextView
        android:id="@+id/accountRegistrationHeaderTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark" />

    <ScrollView
        android:id="@+id/account_registration_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/e_mail"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_bordered_background"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:maxLines="1"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"  />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/UserPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="screen"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/UserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_bordered_background"
                    android:minHeight="50dp"
                    android:paddingBottom="10dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"

                    />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/confirm_password"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/UserPasswordConfirmationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="screen"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/UserPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_bordered_background"
                    android:minHeight="50dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:textSize="20dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_buton_background"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>